@@ -1,3 +1,8 @@
+JO-2007-04-20-0: Bugfix:      Pivot for ARCo Accounting Queries does not show all the fields
+                 Bugster:     6546370
+                 Issue:       2230
+                 Review:      EB
+
 AP-2007-04-13-0: Bugfix:      Updating the online documentation. Adding
                               the description of statistic tables.
                  Bugster:     6545277
